--- a/apps/web/components/public-site.module.css
+++ b/apps/web/components/public-site.module.css
@@ -59,6 +59,9 @@
 .main {
   position: relative;
   z-index: 1;
+  max-width: none;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
